<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CtChoosing">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/ct_BTN_glock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/glock"
            android:textColor="@color/textcolor"
            />
        <Button
            android:id="@+id/ct_BTN_m4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/m4"
            android:textColor="@color/textcolor"
            />
        <Button
            android:id="@+id/ct_BTN_bne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/bne"
            android:textColor="@color/textcolor"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/workout_BTN_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:text="@string/back"
            android:textColor="@color/textcolor"
            app:cornerRadius="20dp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

