<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ex_EDT_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/textcolor"
            android:digits="qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:drawablePadding="8dp"
            android:hint="@string/ex_type"
            android:inputType="text"></EditText>


        <EditText
            android:id="@+id/ex_EDT_distance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/textcolor"
            android:digits="1234567890"
            android:drawablePadding="8dp"
            android:hint="@string/distance"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/ex_EDT_ammoAmount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/textcolor"
            android:digits="1234567890"
            android:drawablePadding="8dp"
            android:hint="@string/ammoAmount"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/ex_EDT_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/textcolor"
            android:digits="1234567890-"
            android:drawablePadding="8dp"
            android:hint="@string/Date"
            android:inputType="text">

        </EditText>


        <Button
            android:id="@+id/publish_BTN_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publish Exercise"
            android:visibility="gone">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

