<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        >
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:layout_marginRight="2dp"
                    android:orientation="vertical">
                    <ImageView

                        android:id="@+id/menu_IMBTN_myEx"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                         />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/MyExercises"
                        android:textStyle="italic"
                        android:textColor="@color/textcolor"
                        android:textSize="30dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical">
                    <ImageView

                        android:id="@+id/menu_IMBTN_practice"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Practice"
                        android:textStyle="italic"
                        android:textColor="@color/textcolor"
                        android:textSize="30dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_marginRight="2dp"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu_IMBTN_follow"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:textSize="20dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/follow"
                        android:textStyle="italic"
                        android:textColor="@color/textcolor"
                        android:textSize="30dp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/menu_BTN_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_IMBTN_follow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_clear"
            android:text="log out"
            android:textColor="@color/textcolor"
            android:textSize="30sp">
        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>